# velo

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config.yaml
.cargo/: config.toml
.github/workflows/: CI.yml  deploy.yml
configuration/: base.yaml  local.yaml  production.yaml
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  subscribe.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
