[package]
name = "velo"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = { version = "0.15.19", default-features = false, features = ["yaml"] }
uuid = { version = "1.18.1", default-features = false, features = ["v4"] }
chrono = { version = "0.4.42", features = ["clock"] }
env_logger = "0.11.8"
log = "0.4.28"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.12"
